out/old/manifests/svms/Ingress.svms-ingress.yaml
metadata:
  name: svms-ingress
  namespace: svms
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"svms:grafana-svc","ingressName":"svms:svms-ingress","hostname":"svms.<COMPANY><DOMAIN_14>","path":"/","allNodes":false}]'
    ingress.kubernetes.io/app-root: /
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: svms.<COMPANY><DOMAIN_14>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-svc
            port:
              number: 13000
apiVersion: <DOMAIN_775>/v1
kind: Ingress
